Fix `TarotCard` z-indexing

--- a/components/TarotCard.module.scss
+++ b/components/TarotCard.module.scss
@@ -34,6 +34,8 @@
   background: var(--color-base);
 
   overflow: hidden;
+
+  z-index: 1;
 }
 
 .card-value,
